--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                     <a style="cursor:pointer" data-toggle="modal" data-target="#modal-help"> Help </a>
                 </li>
                 <li>
-                    <a href="http://github.com/genentech/pviz-apps/proteomics-3d">github</a>
+                    <a href="https://github.com/Genentech/pviz-app-proteomics-3d">github</a>
                 </li>
 
             </ul>
