--- a/app/index.html
+++ b/app/index.html
@@ -242,7 +242,7 @@
         e.src = '//www.google-analytics.com/analytics.js';
         r.parentNode.insertBefore(e, r)
     }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X');
+    ga('create', 'UA-46645179-1');
     ga('send', 'pageview');
 </script>
 
