--- a/app/index.html
+++ b/app/index.html
@@ -243,7 +243,7 @@
         r.parentNode.insertBefore(e, r)
     }(window, document, 'script', 'ga'));
     ga('create', 'UA-46645179-1');
-    ga('send', 'pageview');
+    ga('send', 'pageview', 'app/proteomics-3d');
 </script>
 
 <!-- build:js scripts/main.js -->
