add links to other app and examples

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,11 @@
         </div>
         <div class="navbar-collapse collapse">
 
+            <ul class="nav navbar-nav">
+                <li><a href="../vep">Variant effect predictor app</a></li>
+                <li><a href="../../examples/">pViz.js atomic examples</a></li>
+            </ul>
+
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a style="cursor:pointer" data-toggle="modal" data-target="#modal-help"> Help </a>
