uniprot.js as a bower dep

--- a/app/index.html
+++ b/app/index.html
@@ -263,7 +263,7 @@
 </script>
 
 <!-- build:js scripts/main.js -->
-<script src="lib/uniprot.js"></script>
+<script src="bower_components/uniprot/dist/uniprot.min.js"></script>
 <script src="lib/GLmol.js"></script>
 <script src="scripts/pviz-customization.js"></script>
 <script src="scripts/main.js"></script>
