enhanced support for unavailable (or disabled) WebGL

--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,39 @@
 </div>
 <!-- /.modal -->
 
+<div class="modal fade" id="modal-webgl-error" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h2 class="modal-title" >WebGL is not fully supported</h2>
+            </div>
+            <div class="modal-body">
+                <p>
+                It appears that your browser does not fully support WebGL, you will miss most of this demo.
+
+                </p>
+                <p>
+                    On recent Mac OS Chrome browser, you can enable WebGL rendering by navigating to <code>about://flags/#disable-webgl</code>, switching the flag and restarting your browser.
+                </p>
+                <p>
+                Visit <a href ="http://get.webgl.org/">http://get.webgl.org/</a> to know more.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <div class="pull-right">
+                    © Genentech Inc. 2014
+                </div>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/jquery.js"></script>
